# msoffice-shared-rs

./: Cargo.toml  README.md
src/: docprops.rs  drawingml.rs  error.rs  lib.rs  macros.rs  relationship.rs  sharedtypes.rs  update.rs  util.rs  xml.rs  xsdtypes.rs
src/drawingml/: audiovideo.rs  colors.rs  coordsys.rs  core.rs  diagrams.rs  mod.rs  picture.rs  shapedefs.rs  shapeprops.rs  sharedstylesheet.rs  simpletypes.rs  styles.rs  util.rs
src/drawingml/text/: bodyformatting.rs  bullet.rs  mod.rs  paragraphs.rs  runformatting.rs
