[package]
name = "msoffice_shared"
version = "0.1.0"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
edition = "2018"
description = "Library shared by other MS OpenOffice file format libraries"
keywords = ["office", "pptx", "ppt"]
license = "MIT"
repository = "https://github.com/dam4rus/msoffice-pptx-rs.git"
homepage = "https://github.com/dam4rus/msoffice-pptx-rs"
readme = "README.md"

[dependencies]
quick-xml = "0.13.1"
zip = "0.4.2"
log = "0.4.6"

[dev-dependencies]
simple_logger = "1.0.1"
