[package]
name = "msoffice_shared"
version = "0.1.1"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
edition = "2018"
description = "Library shared by other MS OpenOffice file format libraries"
keywords = ["office", "pptx", "ppt", "word", "spreadsheet"]
license = "MIT"
repository = "https://github.com/dam4rus/msoffice-shared-rs.git"
homepage = "https://github.com/dam4rus/msoffice-shared-rs"
readme = "README.md"
exclude = [
    "tests/presentation.xml",
]

[dependencies]
quick-xml = "0.14.0"
zip = "0.5.2"
log = "0.4.6"
strum = "0.15.0"
strum_macros = "0.15.0"
regex = "1.3.1"

[dev-dependencies]
simple_logger = "1.2.0"
